--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/university
 spring.datasource.username=root
 spring.datasource.password=123456789
 
-spring.application.name=address-service
+spring.application.name=student-service
+server.port=8081
+
+address.service.url=http://localhost:8080/api/address
