Added Spring Cloud Feign Client

--- a/student-service/src/main/resources/application.properties
+++ b/student-service/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.password=123456789
 spring.application.name=student-service
 server.port=8081
 
-address.service.url=http://localhost:8080/api/address
+address.service.url=http://localhost:8080
