Added Eureka Server

--- a/address-service/src/main/resources/application.properties
+++ b/address-service/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=123456789
 
 spring.application.name=address-service
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
