--- a/student-service/pom.xml
+++ b/student-service/pom.xml
@@ -56,6 +56,11 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
             <version>${spring.cloud.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>${spring.cloud.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
