--- a/student-service/src/main/resources/application.properties
+++ b/student-service/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.application.name=student-service
 server.port=8081
 
 address.service.url=http://localhost:8080
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
