--- a/address-service/src/main/resources/application.properties
+++ b/address-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/university
 spring.datasource.username=root
 spring.datasource.password=123456789
-
+server.port=8083
 spring.application.name=address-service
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
