--- a/student-service/src/main/resources/application.properties
+++ b/student-service/src/main/resources/application.properties
@@ -8,3 +8,16 @@ server.port=8081
 address.service.url=http://localhost:8080
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+resilience4j.circuitbreaker.instances.addressService.sliding-window-size=10
+resilience4j.circuitbreaker.instances.addressService.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.addressService.wait-duration-in-opn-state=30000
+resilience4j.circuitbreaker.instances.addressService.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.addressService.permitted-number-of-calls-in-half-open-state=5
+
+resilience4j.circuitbreaker.instances.addressService.allow-health-indicator-to-fail=true
+resilience4j.circuitbreaker.instances.addressService.register-health-indicator=true
+
+management.health.circuitbreakers.enabled= true
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
