--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>spring-cloud-starter-gateway</artifactId>
             <version>${spring.cloud.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+            <version>${spring.cloud.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
