Added Zipkin server for tracing api calls in UI

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 spring.sleuth.reactor.instrumentation-type=decorate-on-each
+
+spring.zipkin.base-url=http://localhost:9411
