--- a/student-service/src/main/resources/application.properties
+++ b/student-service/src/main/resources/application.properties
@@ -21,3 +21,5 @@ resilience4j.circuitbreaker.instances.addressService.register-health-indicator=t
 management.health.circuitbreakers.enabled= true
 management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=always
+
+spring.zipkin.base-url=http://localhost:9411
