--- a/address-service/src/main/resources/application.properties
+++ b/address-service/src/main/resources/application.properties
@@ -5,3 +5,5 @@ server.port=8083
 spring.application.name=address-service
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+spring.zipkin.base-url=http://localhost:9411
