--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>spring-cloud-starter-sleuth</artifactId>
             <version>${spring.cloud.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+            <version>${spring.cloud.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
