--- a/student-service/pom.xml
+++ b/student-service/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>spring-cloud-starter-sleuth</artifactId>
             <version>${spring.cloud.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+            <version>${spring.cloud.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
